--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+
+NOTICE: I WAS NOT ABLE TO GET THIS TO COMPILE SUCCESSFULLY.
+
+I made this fork to try to modify `setup.py` to build an extension on my 
+Windows 10 system, but I was not able to get the tests to pass.
+
+(below is the original README)
+
 pyliblo - Python bindings for the liblo OSC library
 
 Copyright (C) 2007-2015  Dominic Sacré  <dominic.sacre@gmx.de>
